# base-l2-agent-kit-mcp

./: .gitignore  Dockerfile  README.md  SKILL.md  base_agent_kit_mcp.py  glama.json  package.json  pyproject.toml  requirements.txt  server-v5.py  server.json  server.py
src/base_l2_agent_kit/: __init__.py  server.py
src/base_l2_agent_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
